--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "license": "ISC",
   "author": "Umar Farooq",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
